# hpkg

./: README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml
src/hpkg/: __init__.py  main.py
